# GrypeReport

./: README.md  mypy.ini  pyproject.toml
src/grypereport/: __init__.py  __main__.py  report.py
